Fixed z-index of particle effect

--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -1,12 +1,22 @@
+@import './colors';
+
 .Title {
     text-transform: uppercase;
     font-size: 2rem;
     color: white;
     position: relative;
-
+    &::after{
+        content: "";
+        bottom: 0;
+        position: absolute;
+        background-color: $base-turq;
+        left: 0;
+    }
     span {
         position: absolute;
-        top: 50%;
+        top: 40%;
         left: 0;
+        font-size: 4.5rem;
+        opacity: 0.07;
     }
 }
