--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -60,3 +60,7 @@
     }
 }
 
+.particles-class{
+    position: relative;
+    z-index: -1;
+}
